[package]
name = "blues"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "4.1.2"
glib = "0.19.2"
async-std = { version = "1.12.0", features = ["attributes"] }
tokio = { version = "1.36.0", features = ["full"] }
