[package]
name = "blues"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bluer = { version = "0.17.1", features = ["bluetoothd", "l2cap"] }
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.3"
uuid = "1.8.0"
futures = "0.3"
